# EDI_integration

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  PLAYBOOK.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0000_noop_tooling_check.py  0001_canonical_edi_schema.py  0002_users_and_audit_log.py  0003_material_case_size.py  0004_superseded_status.py
app/: config.py  db.py  logging_config.py  main.py
app/adapters/: storage.py
app/adapters/api/: base.py  blinkit_api.py  zepto_api.py
app/adapters/email/: base.py  blinkit_email.py  gmail_client.py  swiggy_email.py
app/adapters/outbound/: base.py  blinkit_outbound.py  email_outbound.py  registry.py  zepto_outbound.py
app/api/: deps.py  middleware.py
app/api/routes/: auth.py  b1_logs.py  dashboard.py  exceptions.py  health.py  inbox.py  master_data.py  pos.py  webhooks.py
app/mappers/: po_to_sales_order.py
app/models/: __init__.py  _enums.py  asn.py  audit_log.py  b1_log.py  edi_po.py  invoice.py  master_data.py  outbound.py  raw_messages.py  users.py
app/parsers/: base.py  blinkit_parser.py  llm_fallback.py  registry.py  swiggy_parser.py  zepto_parser.py
app/sap_b1/: client.py  errors.py  session_pool.py
app/schemas/: api.py  canonical.py
app/validators/: engine.py
app/validators/rules/: case_size.py  gstin.py  moq.py  pricing.py  ship_to_mapping.py  sku_mapping.py  tax_consistency.py  total_reconciliation.py
app/workers/: jobs.py  scheduler.py
app/workflows/: b1_to_outbound.py  canonical_to_b1.py  fetch_api_pos.py  ingest_to_canonical.py  parse_and_persist.py  rtv_flow.py  send_outbound.py  validate_po.py
docs/: Mapping.xlsx  b1_setup.md  legacy-api-notes.md  legacy-frontend-notes.md  master-data-combined.xlsx  sku master.xlsx
frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  router.tsx
frontend/src/components/layout/: Shell.tsx  Topbar.tsx  (+1 more)
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: api-client.ts  queryClient.ts
frontend/src/pages/: LoginPage.tsx  PlaceholderPage.tsx
frontend/src/types/: index.ts
scripts/: auth_gmail.py  build_combined_mapping.py  import_master_data.py  seed_master_data.py  test_b1_connection.py
tests/fixtures/: blinkit_po_webhook.json  blinkit_po_webhook_igst.json  gmail_message_nonpo.json  gmail_message_po.json  zepto_po_event.json  zepto_po_events_response.json
tests/integration/: test_models.py
tests/unit/: conftest.py  test_api_adapters.py  test_gmail_ingestion.py  test_models.py  test_outbound.py  test_parsers.py  test_sap_b1.py  test_validators.py
(+22 files in other folders)
